# simple_on_shutdown

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.sh
.github/: FUNDING.yml
.github/workflows/: dependabot-auto-merge.yml  rust.yml
example/: Cargo.toml
examples/: actix_web_example.rs  minimal.rs  simple_example_ctrl_c_signal.rs
src/: lib.rs
