[package]
name = "simple_on_shutdown"
description = "This crate consists of a convenient macro to specify on shutdown callbacks. It's super simple and stripped-down."
version = "0.1.4"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
exclude = [
    ".travis.yml"
]
keywords = ["shutdown", "callback", "termination"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611"
repository = "https://github.com/phip1611/simple_on_shutdown"
documentation = "https://docs.rs/simple_on_shutdown"

[dependencies]
log = "0.4.11"
