[package]
name = "simple_on_shutdown"
description = """
Convenient macro to specify on shutdown callbacks (e.g., for web server runtimes) in a simple way.
"""
version = "1.0.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2024"
exclude = [
    ".github"
]
categories = ["no-std", "hardware-support"]
keywords = ["shutdown", "callback", "termination"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/simple_on_shutdown"
repository = "https://github.com/phip1611/simple_on_shutdown"
documentation = "https://docs.rs/simple_on_shutdown"
rust-version = "1.85"

# for examples
[dev-dependencies]
env_logger = "0.11"
actix-web = "4.11"
ctrlc = { version = "3.5", features = ["termination"] }
