[package]
name = "example"
version = "0.1.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_on_shutdown = { path = "../" }
env_logger = "0.8.2"
actix-web = "3.3.1"

